--- a/contactlistapp/public/index.html
+++ b/contactlistapp/public/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         
-        <title>This is our devops 05 APP</title>
+        <title>I have changed from GIT HUB</title>
 </head> 
 <body>
    <div class="container" ng-controller="AppCtrl">
