--- a/contactlistapp/public/index.html
+++ b/contactlistapp/public/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
 </head> 
 <body>
    <div class="container" ng-controller="AppCtrl">
-        <h1>Devops App</h1>
+        <h1>Contact List App</h1>
         <table class="table">
           <thead>
           	<tr>
